@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.890 - Added support for enchanted items in Wardrobe. Added a filter for enchanted items/armors. Made resources tables static.
+-------------------------------------------------
 GearSwap 0.880 - Accommodated booleans and numbers in equip commands. Fixed world.conquest.strengths.
 -------------------------------------------------
 GearSwap 0.875 - Changed command_registry handling slightly
